Fix quote issue on text-align helper

--- a/text-align/_mixins.scss
+++ b/text-align/_mixins.scss
@@ -4,14 +4,14 @@ $text-align__special-case: (
 
 @mixin text-align--statement-generator($name) {
     #{th-text-align--selector-generator($name)} {
-        text-align: $name !important;
+        text-align: unquote($name) !important;
     }
 
     @each $pseudo-class, $bool, $suffix in $text-align__pseudo-class {
         @if $bool {
             #{th-text-align--selector-generator($name, $suffix)} {
                 #{$pseudo-class} {
-                    text-align: $name !important;
+                    text-align: unquote($name) !important;
                 }
             }
         }
